# tgale.eth

./: .gitignore  CNAME  Cargo.toml  index.html  output-8ed27e4e16a8634b.css  tailwind.config.js  thomas-gale-310a4ac88baa4a54.js  thomas-gale-310a4ac88baa4a54_bg.wasm
src/: app.rs  fileserv.rs  main.rs
